--- a/example/config.json
+++ b/example/config.json
@@ -16,8 +16,8 @@
         ],
         "string":
         {
-            "title":"Kvazar",
-            "description":"Observe Kevacoin Universe",
+            "title":"KVAZAR",
+            "description":"Observe KevaCoin Universe",
             "navigation":"Navigation",
             "main":"Main",
             "latest":"Latest",
