update title format

--- a/example/config.json
+++ b/example/config.json
@@ -16,8 +16,7 @@
         ],
         "string":
         {
-            "title":"KVAZAR",
-            "description":"Observe KevaCoin Universe",
+            "title":"Observe KevaCoin Universe",
             "navigation":"Navigation",
             "main":"Main",
             "latest":"Latest",
