add gemtext mode

--- a/example/config.json
+++ b/example/config.json
@@ -36,7 +36,8 @@
             "view":
             {
                 "raw":"Raw data",
-                "reader":"Reader"
+                "reader":"Reader",
+                "gemtext":"Gemtext"
             }
         }
     },
